--- a/first_steps_dsmarket.ipynb
+++ b/first_steps_dsmarket.ipynb
@@ -25504,6 +25504,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "region",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "count",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "2fcc9a57-61f8-4d92-a377-0d6058995f2d",
+       "rows": [
+        [
+         "New York",
+         "12196"
+        ],
+        [
+         "Boston",
+         "9147"
+        ],
+        [
+         "Philadelphia",
+         "9147"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 3
+       }
+      },
+      "text/plain": [
+       "region\n",
+       "New York        12196\n",
+       "Boston           9147\n",
+       "Philadelphia     9147\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd_sales.region.value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
