--- a/tarea_2_DSMarket_clustering.ipynb
+++ b/tarea_2_DSMarket_clustering.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1ae21d47",
    "metadata": {},
    "outputs": [],
@@ -29,12 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e3310519",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_weekly = pd.read_csv('.//Data_for_Power_BI/weekly_data_for_power_bi.csv')\n"
+    "df_weekly = pd.read_csv('./Data_for_Power_BI/weekly_data_for_power_bi.csv')"
    ]
   }
  ],
@@ -45,7 +45,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.2"
   }
  },
