--- a/tarea_3_DSMarket_time_series.ipynb
+++ b/tarea_3_DSMarket_time_series.ipynb
@@ -9,21 +9,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d2202ed",
+   "metadata": {},
+   "source": [
+    "## 1. Importing libraries and files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f1cfe45c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np \n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fcbc147f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_weekly = pd.read_csv('./Data_for_Power_BI/weekly_data_for_power_bi.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d694be7",
+   "metadata": {},
+   "source": [
+    "## 2. Feature Engineering"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1cfe45c",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "id": "5505eef6",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Lags (Past values)\n",
+    "# Previous week sales (t-1)\n",
+    "df_weekly['lag_1_sale'] = df_weekly.groupby(['item', 'store_code'])['sale'].shift(1)\n",
+    "df_weekly['lag_1_sellprice'] = df_weekly.groupby(['item', 'store_code'])['sell_price'].shift(1)\n",
+    "\n",
+    "# Sales 4 weeks ago (approx 1 month)\n",
+    "df_weekly['lag_4_sale'] = df_weekly.groupby(['item', 'store_code'])['sale'].shift(4)\n",
+    "df_weekly['lag_4_sellprice'] = df_weekly.groupby(['item', 'store_code'])['sell_price'].shift(4)\n",
+    "\n",
+    "# Sales 52 weeks ago (approx 1 year)\n",
+    "df_weekly['lag_52_sale'] = df_weekly.groupby(['item', 'store_code'])['sale'].shift(52)\n",
+    "df_weekly['lag_52_sellprice'] = df_weekly.groupby(['item', 'store_code'])['sell_price'].shift(52)\n",
+    "\n",
+    "# Variation / Detrending (Target for stationary models)\n",
+    "# \"Diff\": Absolute difference (Current - Previous)\n",
+    "df_weekly['sales_diff'] = df_weekly.groupby(['item', 'store_code'])['sale'].diff(1)\n",
+    "df_weekly['price_diff'] = df_weekly.groupby(['item', 'store_code'])['sell_price'].diff(1)\n",
+    "\n",
+    "# Rolling Features (Smoothing for Power BI visualization)\n",
+    "# 4-week moving average (shows trend without noise)\n",
+    "df_weekly['rolling_mean_4w_sale'] = df_weekly.groupby(['item', 'store_code'])['sale'].transform(lambda x: x.rolling(window=4).mean())\n",
+    "df_weekly['rolling_mean_4w_sellprice'] = df_weekly.groupby(['item', 'store_code'])['sell_price'].transform(lambda x: x.rolling(window=4).mean())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb8f5b1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_calen"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
